--- a/forTrial.html
+++ b/forTrial.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <title>GXO Mobile Project</title>
+        <title>GXO Project</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta author="Piotr Manczak">
         <link rel="stylesheet" href="css/styles.css" />
