--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 
         <div class="searchButton">
-            <button id="searchBtn"><a href="#" target="_blank">Search</a></button>
+            <button id="searchBtn">Search</a></button>
         </div>
         
         <footer class="footer">
