--- a/cookies.html
+++ b/cookies.html
@@ -19,7 +19,7 @@
             purely for the sake of improving user experience.</p>
         
         <footer class="footer">
-            <a href="cookies.html">Privacy policy</a>
+            <a href="privacy.html">Privacy policy</a>
             <a href="index.html">Main page.</a>
             <small class="copyright___REHSW">Copyright © 2024 The cripple &amp; Drivers</small>
         </footer>
